fix gap size 😮‍💨

--- a/Grid-Level-3_3/assets/css/index.css
+++ b/Grid-Level-3_3/assets/css/index.css
@@ -78,13 +78,13 @@ h1 {
 
 .flex {
   display: flex;
-  gap: 1rem;
-  border: 2px solid pink;
+  gap: 2.5rem;
+  /* border: 2px solid pink; */
 }
 
 .grid-parent-2 {
   display: grid;
-  grid-template-columns: 15vw 15vw;
+  grid-template-columns: 20vw 20vw;
   gap: 1rem;
   grid-template-rows: 100px 200px 400px;
 }
@@ -108,12 +108,14 @@ h3 {
 }
 
 figure {
-  display: grid;
+  display: flex;
   flex-direction: column;
 }
 
 figure img {
   width: 100%;
+  height: 90%;
+  object-fit: cover;
 }
 
 figcaption {
